--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         tools:targetApi="31" >
         <activity
             android:name=".ECGChart"
+            android:screenOrientation="landscape"
             android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
